# omnichat-overlay

./: .gitignore  README.md  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
src/: app.d.ts  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: LayoutSidebar.svelte  SidebarButton.svelte  ToastProvider.svelte  TwitchOAuthComponent.svelte
src/lib/: Integrations.svelte.ts  OAuth.store.ts  TauriDataStore.ts  TwitchChatSocket.ts  TwitchHelpers.ts  TwitchOAuth.store.ts  TwitchUser.store.ts  Utils.ts
src/routes/: +layout.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/(index)/: +page.svelte
src/routes/(app)/accounts/: +page.svelte
src/routes/(app)/settings/: +page.svelte
src/routes/oauth/[service]/: +page.server.ts  +page.svelte
src/routes/overlay/: +layout.svelte  +page.svelte
src/styles/: base.scss
