[package]
name = "omnichat-overlay"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ryan Cockram"]
license = ""
repository = ""
default-run = "omnichat-overlay"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "window-set-cursor-grab", "window-create", "window-start-dragging", "window-unmaximize", "window-set-size", "window-set-max-size", "window-set-resizable", "window-set-fullscreen", "window-set-minimizable", "window-request-user-attention", "window-set-title", "window-set-position", "window-set-min-size", "window-minimize", "system-tray", "window-set-always-on-top", "window-center", "window-set-focus", "window-print", "window-set-decorations", "window-set-content-protected", "window-set-closable", "window-maximize", "window-show", "window-hide", "window-unminimize", "window-close", "global-shortcut-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
